# strads

./: CMakeLists.txt
apps/cdmf_release/: CMakeLists.txt  ll-coordinator.cpp  ll-worker.cpp  run.py  train.cpp  train.hpp
apps/cdmf_release/protobufda/: CMakeLists.txt  ccdmf.proto
apps/lda_release/: CMakeLists.txt  ll-coordinator.cpp  ll-worker.hpp  run.py
apps/lda_release/protobufda/: CMakeLists.txt
apps/linear-solver_release/: CMakeLists.txt  lasso.py  ll-scheduler.hpp  ll-worker.hpp  logistic.py
apps/linear-solver_release/protobufda/: CMakeLists.txt  lasso.proto
apps/medlda_release/: CMakeLists.txt  single.py  single_test.py
apps/svm_release/: CMakeLists.txt  lasso.py  linear-svm-train.cpp  linear-svm-worker.cpp  linear-svm.cpp  ll-coordinator.cpp  ll-worker.cpp  svm.py
apps/svm_release/protobufda/: CMakeLists.txt  lasso.proto
src/: CMakeLists.txt
src/strads/ds/: dshard.cpp  dshard.hpp  iohandler.cpp  iohandler.hpp  spmat.hpp
src/strads/ds/protobuf/: CMakeLists.txt  ds.proto
src/strads/sysprotobuf/: CMakeLists.txt  strads.proto
