file(GLOB_RECURSE PROTO_FILE *.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${PROTO_FILE})

# Pass variables to parent dir
set(PROTO_CDMF_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
set(PROTO_CDMF_SRC ${PROTO_SRC} PARENT_SCOPE)
set(PROTO_CDMF_HEADER ${PROTO_HEADER} PARENT_SCOPE)

add_library(protoCDMF ${PROTO_SRC} ${PROTO_HEADER})

target_include_directories(protoCDMF PUBLIC
	${PROTOBUF_INCLUDE_DIR})

target_link_libraries(protoCDMF PUBLIC
	${PROTOBUF_LIBRARY})