file(GLOB_RECURSE PROTO_FILE *.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${PROTO_FILE})

# Pass variables to parent dir
set(PROTO_LDA_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
set(PROTO_LDA_SRC ${PROTO_SRC} PARENT_SCOPE)
set(PROTO_LDA_HEADER ${PROTO_HEADER} PARENT_SCOPE)

add_library(protoLDA ${PROTO_SRC} ${PROTO_HEADER})

target_include_directories(protoLDA PUBLIC
	${PROTOBUF_INCLUDE_DIR})

target_link_libraries(protoLDA PUBLIC
	${PROTOBUF_LIBRARY})