file(GLOB_RECURSE PROTO_FILE *.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${PROTO_FILE})

# Pass variables to parent dir
set(PROTO_LS_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
set(PROTO_LS_SRC ${PROTO_SRC} PARENT_SCOPE)
set(PROTO_LS_HEADER ${PROTO_HEADER} PARENT_SCOPE)

add_library(protoLS ${PROTO_SRC} ${PROTO_HEADER})

target_include_directories(protoLS PUBLIC
	${PROTOBUF_INCLUDE_DIR})

target_link_libraries(protoLS PUBLIC
	${PROTOBUF_LIBRARY})